--- a/dronesar-backend/pom.xml
+++ b/dronesar-backend/pom.xml
@@ -17,6 +17,13 @@
             <version>1.1.0.Final</version>
         </dependency>
 
+        <!-- For video processing -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
